src/log/build_2023-10-23_20-52-40/template_drone_control/stderr.log
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::local_pos_cb(geometry_msgs::msg::PoseStamped_<std::allocator<void> >::SharedPtr)’:
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp:87:43: error: expected ‘;’ before ‘current_local_pos_’
   87 |         current_local_pos_.pose.position.x
      |                                           ^
      |                                           ;
   88 |         current_local_pos_.pose.position.y
      |         ~~~~~~~~~~~~~~~~~~                 
/home/lrs-ubuntu/LRS/ros2_ws_group_10/src/template_drone_control/src/template_drone_control_node.cpp:87:42: warning: statement has no effect [-Wunused-value]
   87 |         current_local_pos_.pose.position.x
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
